--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "font-awesome": "4.7.0",
     "jquery": "^3.6.0",
     "node-sass": "^5.0.0",
+    "prop-types": "15.7.2",
     "react": "^17.0.2",
+    "react-animation-components": "3.0.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.0",
     "react-redux-form": "1.16.14",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "4.4.1",
     "react-truncate": "^2.4.0",
     "reactstrap": "^8.9.0",
     "redux": "4.0.5",
