--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "4.0.5",
     "web-vitals": "^1.0.1"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
